# poc-renovater

./: .dockerignore  .env.example  .gitignore  README.md  setup_wif.sh  test_deploy_local.py  test_deploy_preview.py  test_e2e.py
.agents/: AGENTS.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml  test_db.py  test_github.py  test_run.py
apps/api/app/: deps.py  main.py  settings.py
apps/api/app/adapters/: local_event.py  pubsub_event.py  scm_github.py  slack.py  storage_gcs.py
apps/api/app/adapters/repositories/: database.py  firestore_agent_repository.py  sql_agent_repository.py
apps/api/app/application/: logger.py
apps/api/app/application/agents/: autofix_planner.py  charter.py  coding.py  deploy.py  ingest.py  issue_planner.py  repo.py  review.py  runner.py  self_improve.py
apps/api/app/application/usecases/: agent_usecase.py
apps/api/app/domain/: models.py
apps/api/app/domain/repositories/: agent_repository.py
apps/api/app/interface/http/routers/: agents.py  events.py  jobs.py  uploads.py  webhooks.py
apps/api/app/ports/: event.py  scm.py  storage.py
apps/api/scripts/: add_secrets.py  deploy_agents.py
apps/api/tests/unit/: test_events.py  test_jobs.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: app-architecture.md  planning.md  setup-ja.md  tech-stack-validation.md
docs/plans/: implementation-plan-job-tracker.md  implementation-plan.md
infra/: main.tf
sandbox/: cloudbuild.yaml  run.sh
scripts/: deploy.sh
templates/: README.md.tmpl
(+42 files in other folders)
