[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "firebase-admin>=7.4.0",
    "google-adk>=2.3.0",
    "google-cloud-firestore>=2.28.0",
    "google-cloud-pubsub>=2.39.0",
    "google-cloud-secret-manager>=2.29.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
]
